--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "@types/pg": "^8.6.6",
-    "@types/pg-promise": "^5.4.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -23,7 +22,9 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "pg-promise": "^11.4.3",
-    "supertest": "^6.3.3"
+    "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
