--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.12",
     "@types/supertest": "^2.0.12",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
